New form to ask

--- a/mysite/templates/asking/ask.html
+++ b/mysite/templates/asking/ask.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1 class = "text-center">Задайте свой вопрос</h1>
-    <form role = "form">
+    <form role = "form" method = "post">
         <div class = "form-group">
             <label for="question">Вопрос</label>
             <input type="form-control" class ="form-control" id="question" placeholder="Введите вопрос">
