--- a/asking/templates/asking/question.html
+++ b/asking/templates/asking/question.html
@@ -2,23 +2,23 @@
 
 {% load static %}
 
-{% block title %}{{ask.ask_title}}{% endblock %}
+{% block title %}{{quest.ask_title}}{% endblock %}
 
 {% block content %}
 
     <div class="p-1 bg-light">
-        <h4 class="font-weight-bold text-center">{{ask.ask_title}}</h4>
+        <h4 class="font-weight-bold text-center">{{quest.ask_title}}</h4>
     </div>
     <div class="m-1">
-        <p>{{ask.ask_explane}}</p>
+        <p>{{quest.ask_explane}}</p>
     </div>
     <div class="container">
         <div class="row">
             <div class ="col-10">
-                <p>{{ask.asker_name}}</p>
+                <p>{{quest.asker_name}}</p>
             </div>
             <div class ="col-2">
-                <p class="text-right">{{ask.ask_date}}</p>
+                <p class="text-right">{{quest.ask_date}}</p>
             </div>
         </div>
     </div>
@@ -27,9 +27,9 @@
     {% if form.errors %}
         <div class="alert alert-danger">{{ form.non_field_errors.as_text|slice:"2:" }}</div>
     {% endif %}
-    <form action="{% url 'asking:get_answer' ask.id %}" method="POST">
+    <form role="form" method="POST">
         {% csrf_token %}
-        <p class = "font-weight-bold">{{ user.user_login }}<p>
+        <p class = "font-weight-bold">{{ user.username }}<p>
         {{ form.answer_text }}<br>
 	    <button type="submit">Ответить</button>
     </form>
@@ -43,7 +43,7 @@
 
         <div class="p-1 bg-light border rounded">
             <p class="font-weight-bold">{{b.answerer_name}}</p>
-            <p>{{answer.answer_text}}</p>
+            <p>{{b.answer_text}}</p>
             <div class="container">
                 <div class="row">
                     <div class="col-11">
