--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -37,7 +37,7 @@
                             </div>
 
                             <div class="col-2 mr-4 ml-auto">
-                                <img class="rounded-circle" src="{{ user.user_avatar }}" style = "width: 90px">
+                                <img class="rounded-circle" src="{{ avatar }}" style = "width: 90px">
                             </div>
                         <div class="row">
                             <div class="mr-4">
@@ -57,6 +57,7 @@
                 {% else %}
                     <div class="container avatar-container col-md-4">
                             <div class="nav-item">
+
                             </div>
                             <div class="col-2 mr-4 ml-auto">
                                 <img class="rounded-circle" src="{% static "asking/img/noavatar.jpg" %}" style = "width: 90px">
