--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="row">
                                 <div class="col col-np">
-                                    <a href="#">Настройки</a>
+                                    <a href="{% url 'settings' %}">Настройки</a>
                                 </div>
 
                                 <div class="col mr-2 col-np">
