--- a/asking/templates/asking/question.html
+++ b/asking/templates/asking/question.html
@@ -6,13 +6,13 @@
 
 {% block content %}
 
-    <div class="p-1 bg-light">
+    <div class="p-3 mb-3 bg-light border rounded">
         <h4 class="font-weight-bold text-center">{{quest.ask_title}}</h4>
     </div>
     <div class="m-1">
         <p>{{quest.ask_explane}}</p>
     </div>
-    <div class="container">
+    <p class="container">
         <div class="row">
             <div class ="col-10">
                 <p>{{quest.asker_name}}</p>
@@ -21,6 +21,7 @@
                 <p class="text-right">{{quest.ask_date}}</p>
             </div>
         </div>
+        <p>Теги: {{ quest.ask_tags }}</p>
     </div>
 
 {% if user.is_authenticated %}
