--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -88,6 +88,12 @@
                     {% endblock %}
 				</div>
 				<div class="col-4 mt-3">
+                    <div>
+                        <a href = "{% url 'index' %}"><h2 class="text-center">Последние вопросы</h2></a>
+                    </div>
+                    <div>
+                        <a href = "{% url 'index_hot' %}"><h2 class="text-center">Популярные вопросы</h2></a>
+                    </div>
 					<div class = "border rounded bg-light mb-4">
 						<h2 class = "text-center">Популярные теги</h2>
                         {% block tags %}
