--- a/asking/templates/asking/question.html
+++ b/asking/templates/asking/question.html
@@ -12,7 +12,7 @@
     <div class="m-1">
         <p>{{quest.ask_explane}}</p>
     </div>
-    <p class="container">
+    <div class="container">
         <div class="row">
             <div class ="col-10">
                 <p>{{quest.asker_name}}</p>
