Added index pagination

--- a/asking/templates/asking/index.html
+++ b/asking/templates/asking/index.html
@@ -7,16 +7,37 @@
 {% block content %}
     <div class = "my-4 p-2">
         {% if index %}
-            {% if tag %}
-                <div class="row">
-                    <h2>Вопросы с тегом "{{ tag.name }}"</h2>
-                </div>
-            {% else %}
-                <div class="row">
-                    <h2>{{ title }}</h2>
-                </div>
+            <div class="row">
+                <h2>{{ title }}</h2>
+            </div>
+            {% if page_obj.has_other_pages %}
+                <nav>
+                    <ul class="pagination justify-content-left">
+                        {% if page_obj.has_previous %}
+                            <li class="page_item">
+                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&lt;</a>
+                            </li>
+                        {% endif %}
+                        {% for p in page_obj.paginator.page_range %}
+                            {% if page_obj.number == p %}
+                                <li class = "page-item active">
+                                    <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                                </li>
+                            {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
+                                <li class = "page-item">
+                                    <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if page_obj.has_next %}
+                            <li class="page_item">
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}">&gt;</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
             {% endif %}
-            {% for a in index %}
+            {% for a in page_obj %}
                 <div class = "border rounded bg-light my-4 p-2">
                     <a href="{% url 'question' a.id%}"><h3>{{a.ask_title}}</h3></a>
                     <p>{{a.ask_explane}}</p>
