--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -23,22 +23,22 @@
 				<div class="container">
 					<form class="form-inline my-2 col">
 							<div class="row">
-								<div class="col-md-9">
+								<div class="col-9">
 									<input class="form-control" type="search" placeholder="Найти" aria-label="search">
 								</div>
-								<div class="col-md-3">
+								<div class="col-3">
 									<button class="btn btn-info" type="submit"><i class="fas fa-search"></i></button>
 								</div>
 							</div>
 					</form>
 				</div>
                 {% if user.is_authenticated %}
-                    <div class="container avatar-container col-md-4">
+                    <div class="container avatar-container col-4">
                             <div class="nav-item">
                                 <a class="nav-link" href="{% url 'ask' %}">Ask me!</a>
                             </div>
 
-                            <div class="col-2 mr-4 ml-auto">
+                            <div class="col-2 mr-4">
                                 <img class="rounded-circle" src="{{ avatar }}" style = "width: 90px">
                             </div>
                         <div class="row">
@@ -46,22 +46,22 @@
                                 <b>{{ user.username }}</b>
                             </div>
                             <div class="row">
-                                <div class="col col-np">
+                                <div class="col">
                                     <a href="{% url 'settings' %}">Настройки</a>
                                 </div>
 
-                                <div class="col mr-2 col-np">
+                                <div class="col mr-2">
                                     <a href="{% url 'logout' %}">Выйти</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 {% else %}
-                    <div class="container avatar-container col-md-4">
+                    <div class="container avatar-container col-4">
                             <div class="nav-item">
                                 <a class="nav-link" href="{% url 'ask' %}">Ask me!</a>
                             </div>
-                            <div class="col-2 mr-4 ml-auto">
+                            <div class="col-2 mr-4">
                                 <img class="rounded-circle" src="{% static "asking/img/noavatar.jpg" %}" style = "width: 90px">
                             </div>
                         <div class="row">
@@ -69,11 +69,10 @@
                                 <b>Гость</b>
                             </div>
                             <div class="row">
-                                <div class="col col-np">
+                                <div class="col">
                                     <a href="{% url 'login' %}">Войти</a>
                                 </div>
-
-                                <div class="col mr-2 col-np">
+                                <div class="col">
                                     <a href="{% url 'signup' %}">Регистрация</a>
                                 </div>
                             </div>
@@ -97,22 +96,13 @@
                         <a href = "{% url 'index_hot' %}"><h3>Популярные вопросы</h3></a>
                     </div>
                     <hr>
-					<div class = "border rounded bg-light mb-4">
-						<h2 class = "text-center">Популярные теги</h2>
-                        {% block tags %}
-                            {% include 'asking/sidepanel.html' %}
-                        {% endblock %}
-					</div>
-					<div class = "border rounded bg-light mb-4">
-						<h2 class = "text-center">Самые активные</h2>
-                        {% block active_users %}
-                            {% include 'asking/sidepanel.html' %}
-                        {% endblock %}
-					</div>
+                    {% block sidepanel %}
+                        {% include 'asking/sidepanel.html' %}
+                    {% endblock %}
+
 				</div>
 			</div>
 		</div>
-
 		<footer>
 			<div class="container text-center">
 				<p class="top-cover">
