--- a/asking/templates/asking/question.html
+++ b/asking/templates/asking/question.html
@@ -34,13 +34,17 @@
                 </p>
             </div>
         {% if user.is_authenticated %}
-            <div class = "col-3">
+            <div class="col-3">
                 <div class="row">
                     <div class="col-6">
-                        <button class="btn btn-default"><i class="fas fa-thumbs-up"></i></button>
+                        <button class="btn btn-info asklikes-button"  answer="asklike" data-ans="{{ quest.id }}">
+                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeask{{ quest.id }}">{{ quest.ask_likes }}</i></strong>
+                        </button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-default"><i class="fas fa-thumbs-down"></i></button>
+                        <button class="btn btn-info asklikes-button" answer="askdislike" data-ans="{{ quest.id }}">
+                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disask{{ quest.id }}">{{ quest.ask_dislikes }}</i></strong>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -87,13 +91,13 @@
                             <div class="col-3">
                                 <div class="row">
                                     <div class="col-6">
-                                        <button class="btn btn-secondary likes-button" answer="anslike" data-ans="{{ b.answer }}">
-                                            <strong><i class="fas fa-thumbs-up"></i></strong>
+                                        <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
+                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
                                         </button>
                                     </div>
                                     <div class="col-6">
-                                        <button class="btn btn-secondary likes-button" answer="ansdislike" data-ans="{{ b.answer }}">
-                                            <strong><i class="fas fa-thumbs-down"></i></strong>
+                                        <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
+                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
                                         </button>
                                     </div>
                                 </div>
@@ -119,13 +123,13 @@
                             <div class="col-3">
                                 <div class="row">
                                     <div class="col-6">
-                                        <button class="btn btn-secondary likes-button" answer="anslike" data-ans="{{ b.answer }}">
-                                            <strong><i class="fas fa-thumbs-up"></i></strong>
+                                        <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
+                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
                                         </button>
                                     </div>
                                     <div class="col-6">
-                                        <button class="btn btn-secondary likes-button" answer="ansdislike" data-ans="{{ b.answer }}">
-                                            <strong><i class="fas fa-thumbs-down"></i></strong>
+                                        <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
+                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
                                         </button>
                                     </div>
                                 </div>
