--- a/asking/templates/asking/question.html
+++ b/asking/templates/asking/question.html
@@ -22,7 +22,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-9">
+        {% if quest.asker_name == user %}
+            <div class="col-8">
                 <p class="tags">
                     Теги:
                     {% for tag in quest.ask_tags.all %}
@@ -33,16 +34,53 @@
                     {% endfor %}
                 </p>
             </div>
+            <div class="col-1">
+                <a href="{% url 'askupdate' quest.id%}" class="btn btn-info" type="submit"><i class="fas fa-pencil-alt" style="color:white"></i></a>
+            </div>
+            <div class="col-1">
+                <form action="{% url 'askdelete' quest.id%}" method="post">
+                    {% csrf_token %}
+                    <button class="btn btn-danger" onclick="deleteask()"><i class="fas fa-trash-alt"></i></button>
+                </form>
+            </div>
+        {% else %}
+            <div class="col-10">
+                <p class="tags">
+                    Теги:
+                    {% for tag in quest.ask_tags.all %}
+                        <a href="{% url "index_tag" tag.slug %}">
+                            {{ tag.name }}
+                        </a>
+                        {% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </p>
+            </div>
+        {% endif %}
         {% if user.is_authenticated %}
-            <div class="col-3">
+            <div class="col-2">
                 <div class="row">
                     <div class="col-6">
-                        <button class="btn btn-info asklikes-button"  answer="asklike" data-ans="{{ quest.id }}">
+                        <button class="btn btn-info float-right asklikes-button"  answer="asklike" data-ans="{{ quest.id }}">
                             <strong><i class="fas fa-thumbs-up" style="color:white" id="likeask{{ quest.id }}">{{ quest.ask_likes }}</i></strong>
                         </button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-info asklikes-button" answer="askdislike" data-ans="{{ quest.id }}">
+                        <button class="btn btn-info float-right asklikes-button" answer="askdislike" data-ans="{{ quest.id }}">
+                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disask{{ quest.id }}">{{ quest.ask_dislikes }}</i></strong>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        {% else %}
+            <div class="col-2">
+                <div class="row">
+                    <div class="col-6">
+                        <button disabled class="btn btn-secondary asklikes-button"  answer="asklike" data-ans="{{ quest.id }}">
+                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeask{{ quest.id }}">{{ quest.ask_likes }}</i></strong>
+                        </button>
+                    </div>
+                    <div class="col-6">
+                        <button disabled class="btn btn-secondary asklikes-button" answer="askdislike" data-ans="{{ quest.id }}">
                             <strong><i class="fas fa-thumbs-down" style="color:white" id="disask{{ quest.id }}">{{ quest.ask_dislikes }}</i></strong>
                         </button>
                     </div>
@@ -51,99 +89,7 @@
         {% endif %}
         </div>
     </div>
-
-{% if user.is_authenticated %}
-    {% if form.errors %}
-        <div class="alert alert-danger">{{ form.non_field_errors.as_text|slice:"2:" }}</div>
-    {% endif %}
-    <hr>
-    <form role="form" method="post">
-        {% csrf_token %}
-        <p class = "font-weight-bold">Введите ответ<p>
-        {{ form.answer_text }}<br>
-	    <button type="submit" class="btn btn-info">Ответить</button>
-    </form>
-
-{% else %}
-    <p class="font-weight-bold">Войдите или зарегистрируйтесь, чтобы оставить ответ</p>
-{% endif %}
-
-{% if quest.ask_answer.all %}
-	{% for b in quest.ask_answer.all %}
-        {% if b.answer_is_right == True %}
-            <div class="p-1 mb-2 bg-success bg-gradient border rounded">
-                <div class="row">
-                    <div class="col-6">
-                        <p class="font-weight-bold">{{b.answerer_name}}</p>
-                    </div>
-                    <div class="col-6">
-                        <p class="text-right">Правильный ответ</p>
-                    </div>
-                </div>
-                <p>{{b.answer_text}}</p>
-                <hr>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-9">
-                            <p>{{b.answer_date}}</p>
-                        </div>
-                        {% if user.is_authenticated %}
-                            <div class="col-3">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
-                                        </button>
-                                    </div>
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-	    {% endif %}
-    {% endfor %}
-	{% for b in quest.ask_answer.all %}
-        {% if b.answer_is_right == False %}
-            <div class="p-1 mb-2 bg-light border rounded">
-                <p class="font-weight-bold">{{b.answerer_name}}</p>
-                <p>{{b.answer_text}}</p>
-                <hr>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-9">
-                            <p>{{b.answer_date}}</p>
-                        </div>
-                        {% if user.is_authenticated %}
-                            <div class="col-3">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
-                                        </button>
-                                    </div>
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-	{% endfor %}
-
-{% else %}
-	На этот вопрос еще никто не ответил :(
-{% endif %}
-
-	
+    {% block answers %}
+          {% include 'asking/answers.html' %}
+    {% endblock %}
 {% endblock %}
