--- a/asking/templates/asking/sidepanel.html
+++ b/asking/templates/asking/sidepanel.html
@@ -3,17 +3,13 @@
 {% block sidepanel %}
     <div class = "border rounded bg-light mb-4">
         <h2 class = "text-center">Популярные теги</h2>
-        {% for tag in hot_tags %}
-            <a href="{% url "index_tag" tag.slug %}">
-                {{ tag.name }}
-            </a>
-        {% endfor %}
+        <div class="hot_tags">
+        </div>
     </div>
     <div class = "border rounded bg-light mb-4">
         <h2 class = "text-center">Самые активные</h2>
-        {% for u in active %}
-            <p>{{ u.username }}</p>
-        {% endfor %}
+        <div class="active_users">
+        </div>
     </div>
 {% endblock %}
 
