--- a/asking/templates/asking/answers.html
+++ b/asking/templates/asking/answers.html
@@ -23,155 +23,150 @@
 {% if quest.ask_answer.all %}
 	{% for b in quest.ask_answer.all|dictsort:"answer_date" reversed %}
         {% if b.answer_is_right == True %}
-            <div class="p-1 mb-2 bg-success bg-gradient border rounded">
-            {% if quest.asker_name == user %}
+            <div class="p-2 mb-4 bg-success bg-gradient border rounded">
                 <div class="row">
-                    <div class="col-9">
-                        <p class="font-weight-bold">{{b.answerer_name}}</p>
+                    <div class="col-2">
+                        <img class="rounded-circle m-2" src="/{{ b.answerer_name.account.user_avatar }}" style = "width: 120px">
+                        <br>
+                        <p class="text-center font-weight-bold">{{b.answerer_name}}</p>
                     </div>
-                    <div class="col-2 right_button" data-ans="{{ b.id }}" answer="deright">
-                        <button class="btn btn-sussess" type="submit"><p style="color:white">Снять отметку</p></button>
-                    </div>
-                    <div class="col-1">
-                        <i class="fas fa-3x fa-check-circle" style="color:white"></i>
-                    </div>
-                </div>
-            {% else %}
-                <div class="row">
-                    <div class="col-11">
-                        <p class="font-weight-bold">{{b.answerer_name}}</p>
-                    </div>
-                    <div class="col-1">
-                        <i class="fas fa-3x fa-check-circle" style="color:white"></i>
-                    </div>
-                </div>
-            {% endif %}
-                <p>{{b.answer_text}}</p>
-                <hr>
-                <div class="container">
-                    <div class="row">
-                    {% if b.answerer_name == user %}
-                        <div class="col-8">
-                            <p>{{b.answer_date}}</p>
-                        </div>
-                        <div class="col-1">
-                            <a href="{% url 'ansupdate' b.id%}" class="btn btn-info" type="submit"><i class="fas fa-pencil-alt" style="color:white"></i></a>
-                        </div>
-                        <div class="col-1">
-                            <form action="{% url 'ansdelete' b.id%}" method="post">
-                                {% csrf_token %}
-                                <button class="btn btn-danger" onclick="deleteans()"><i class="fas fa-trash-alt"></i></button>
-                            </form>
-                        </div>
-                        {% else %}
-                        <div class="col-10">
-                            <p>{{b.answer_date}}</p>
-                        </div>
-                        {% endif %}
-                        {% if user.is_authenticated %}
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-10">
+                                <p class="text-justify text-wrap text-break">{{b.answer_text}}</p>
+                            </div>
                             <div class="col-2">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
-                                        </button>
+                                <i class="fas fa-3x fa-check-circle d-flex justify-content-end" style="color:white"></i>
+                                {% if quest.asker_name == user %}
+                                    <div class="right_button" data-ans="{{ b.id }}" answer="deright">
+                                        <button class="btn btn-sussess" type="submit"><p style="color:white">Снять отметку</p></button>
                                     </div>
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
-                                        </button>
-                                    </div>
-                                </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                        {% if b.answerer_name == user %}
+                            <div class="col-7">
+                                <p>{{b.answer_date}}</p>
+                            </div>
+                            <div class="col-1">
+                                <a href="{% url 'ansupdate' b.id%}" class="btn btn-info" type="submit"><i class="fas fa-pencil-alt" style="color:white"></i></a>
+                            </div>
+                            <div class="col-1">
+                                <form action="{% url 'ansdelete' b.id%}" method="post">
+                                    {% csrf_token %}
+                                    <button class="btn btn-danger" onclick="deleteans()"><i class="fas fa-trash-alt"></i></button>
+                                </form>
                             </div>
                         {% else %}
-                            <div class="col-2">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <button disabled class="btn btn-secondary anslikes-button" answer="anslike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
-                                        </button>
-                                    </div>
-                                    <div class="col-6">
-                                        <button disabled class="btn btn-secondary anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
-                                        </button>
-                                    </div>
-                                </div>
+                            <div class="col-9">
+                                <p>{{b.answer_date}}</p>
                             </div>
                         {% endif %}
+                            <div class="col-3">
+                                <div class="row">
+                                {% if user.is_authenticated %}
+                                        <div class="col-6">
+                                            <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
+                                                <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
+                                            </button>
+                                        </div>
+                                        <div class="col-6">
+                                            <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
+                                                <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
+                                            </button>
+                                        </div>
+                                {% else %}
+                                        <div class="col-6">
+                                            <button disabled class="btn btn-secondary anslikes-button" answer="anslike" data-ans="{{ b.id }}">
+                                                    <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
+                                            </button>
+                                        </div>
+                                        <div class="col-6">
+                                            <button disabled class="btn btn-secondary anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
+                                                <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
+                                            </button>
+                                        </div>
+                                {% endif %}
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-	    {% endif %}
+        {% endif %}
     {% endfor %}
 	{% for b in quest.ask_answer.all|dictsort:"answer_date" reversed %}
         {% if b.answer_is_right == False %}
             <div class="p-1 mb-2 bg-light border rounded">
-                {% if quest.asker_name == user %}
+                <div class="row">
+                    <div class="col-2">
+                        <img class="rounded-circle m-2" src="/{{ b.answerer_name.account.user_avatar }}" style = "width: 120px">
+                        <br>
+                        <p class="text-center font-weight-bold">{{b.answerer_name}}</p>
+                    </div>
+                    <div class="col-10">
                         <div class="row">
                             <div class="col-10">
-                                <p class="font-weight-bold">{{b.answerer_name}}</p>
+                                <p class="text-justify text-wrap text-break">{{b.answer_text}}</p>
                             </div>
-                            <div class="col-2 right_button" data-ans="{{ b.id }}" answer="right">
-                                <button class="btn btn-success" type="submit">Правильно!</button>
+                            <div class="col-2">
+                                {% if quest.asker_name == user %}
+                                    <div class="right-button" data-ans="{{ b.id }}" answer="right">
+                                        <button class="btn btn-success" type="submit"><p style="color:white">Верно!</p></button>
+                                    </div>
+                                {% endif %}
                             </div>
                         </div>
-                {% else %}
-                    <p class="font-weight-bold">{{b.answerer_name}}</p>
-                {% endif %}
-                <p>{{b.answer_text}}</p>
-                <hr>
-                <div class="container">
-                    <div class="row">
+                        <hr>
+                        <div class="row">
                         {% if b.answerer_name == user %}
-                        <div class="col-8">
-                            <p>{{b.answer_date}}</p>
-                        </div>
-                        <div class="col-1">
-                            <a href="{% url 'ansupdate' b.id%}" class="btn btn-info" type="submit"><i class="fas fa-pencil-alt" style="color:white"></i></a>
-                        </div>
-                        <div class="col-1">
-                            <form action="{% url 'ansdelete' b.id%}" method="post">
-                                {% csrf_token %}
-                                <button class="btn btn-danger" onclick="deleteans()"><i class="fas fa-trash-alt"></i></button>
-                            </form>
-                        </div>
-                        {% else %}
-                        <div class="col-10">
-                            <p>{{b.answer_date}}</p>
-                        </div>
-                        {% endif %}
-                        {% if user.is_authenticated %}
-                            <div class="col-2">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
-                                        </button>
-                                    </div>
-                                    <div class="col-6">
-                                        <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
-                                        </button>
-                                    </div>
-                                </div>
+                            <div class="col-7">
+                                <p>{{b.answer_date}}</p>
+                            </div>
+                            <div class="col-1">
+                                <a href="{% url 'ansupdate' b.id%}" class="btn btn-info" type="submit"><i class="fas fa-pencil-alt" style="color:white"></i></a>
+                            </div>
+                            <div class="col-1">
+                                <form action="{% url 'ansdelete' b.id%}" method="post">
+                                    {% csrf_token %}
+                                    <button class="btn btn-danger" onclick="deleteans()"><i class="fas fa-trash-alt"></i></button>
+                                </form>
                             </div>
                         {% else %}
-                            <div class="col-2">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <button disabled class="btn btn-secondary anslikes-button" answer="anslike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
-                                        </button>
-                                    </div>
-                                    <div class="col-6">
-                                        <button disabled class="btn btn-secondary anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
-                                            <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
-                                        </button>
-                                    </div>
-                                </div>
+                            <div class="col-9">
+                                <p>{{b.answer_date}}</p>
                             </div>
                         {% endif %}
+                            <div class="col-3">
+                                <div class="row">
+                                {% if user.is_authenticated %}
+                                        <div class="col-6">
+                                            <button class="btn btn-info anslikes-button" answer="anslike" data-ans="{{ b.id }}">
+                                                <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
+                                            </button>
+                                        </div>
+                                        <div class="col-6">
+                                            <button class="btn btn-info anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
+                                                <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
+                                            </button>
+                                        </div>
+                                {% else %}
+                                        <div class="col-6">
+                                            <button disabled class="btn btn-secondary anslikes-button" answer="anslike" data-ans="{{ b.id }}">
+                                                    <strong><i class="fas fa-thumbs-up" style="color:white" id="likeans{{ b.id }}">{{ b.answer_likes }}</i></strong>
+                                            </button>
+                                        </div>
+                                        <div class="col-6">
+                                            <button disabled class="btn btn-secondary anslikes-button" answer="ansdislike" data-ans="{{ b.id }}">
+                                                <strong><i class="fas fa-thumbs-down" style="color:white" id="disans{{ b.id }}">{{ b.answer_dislikes }}</i></strong>
+                                            </button>
+                                        </div>
+                                {% endif %}
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
