--- a/asking/templates/asking/question.html
+++ b/asking/templates/asking/question.html
@@ -7,10 +7,10 @@
 {% block content %}
 
     <div class="p-3 mb-3 bg-light border rounded">
-        <h4 class="font-weight-bold text-center">{{quest.ask_title}}</h4>
+        <h4 class="font-weight-bold text-center text-wrap text-break">{{quest.ask_title}}</h4>
     </div>
     <div class="m-1">
-        <p>{{quest.ask_explane}}</p>
+        <p class="text-justify text-wrap text-break">{{quest.ask_explane}}</p>
     </div>
     <div class="container">
         <div class="row">
