Popular tags and active users

--- a/asking/templates/asking/sidepanel.html
+++ b/asking/templates/asking/sidepanel.html
@@ -3,12 +3,28 @@
 {% block sidepanel %}
     <div class = "border rounded bg-light mb-4">
         <h2 class = "text-center">Популярные теги</h2>
-        <div class="hot_tags">
+        <div class="hot_tags0 text-center">
+        </div>
+        <div class="hot_tags1 text-center">
+        </div>
+        <div class="hot_tags2 text-center">
+        </div>
+        <div class="hot_tags3 text-center">
+        </div>
+        <div class="hot_tags4 text-center">
         </div>
     </div>
     <div class = "border rounded bg-light mb-4">
         <h2 class = "text-center">Самые активные</h2>
-        <div class="active_users">
+        <div class="active_users0 text-center">
+        </div>
+        <div class="active_users1 text-center">
+        </div>
+        <div class="active_users2 text-center">
+        </div>
+        <div class="active_users3 text-center">
+        </div>
+        <div class="active_users4 text-center">
         </div>
     </div>
 {% endblock %}
