--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -17,7 +17,7 @@
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light border rounded bg-light">
 				<div class="container col-md-5">
-					<a class="navbar-brand" href="{% url 'index' %}">AskMe.fm</a>
+					<a class="navbar-brand" style="font-weight: bold" href="{% url 'index' %}">AskMe.fm</a>
 				</div>
 
 				<div class="container">
