Working hot tags

--- a/asking/templates/asking/sidepanel.html
+++ b/asking/templates/asking/sidepanel.html
@@ -3,15 +3,20 @@
 {% block sidepanel %}
     <div class = "border rounded bg-light mb-4">
         <h2 class = "text-center">Популярные теги</h2>
-        <div class="hot_tags0 text-center">
+        <div class="text-center my-3">
+            <a class="hot_tags0" style="font-weight: bold"></a>
         </div>
-        <div class="hot_tags1 text-center">
+        <div class="text-center my-3">
+            <a class="hot_tags1" style="font-weight: bold"></a>
         </div>
-        <div class="hot_tags2 text-center">
+        <div class="text-center my-3">
+            <a class="hot_tags2" style="font-weight: bold"></a>
         </div>
-        <div class="hot_tags3 text-center">
+        <div class="text-center my-3">
+            <a class="hot_tags3" style="font-weight: bold"></a>
         </div>
-        <div class="hot_tags4 text-center">
+        <div class="text-center my-3">
+            <a class="hot_tags4" style="font-weight: bold"></a>
         </div>
     </div>
     <div class = "border rounded bg-light mb-4">
