--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -110,6 +110,6 @@
 			</div>
 		</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script charset="utf-8" src="{% static 'asking/js/ajax.js' %}"></script>
+    <script src="{% static 'asking/js/ajax.js' %}"></script>
 	</body>
 </html>
