Added simple search

--- a/asking/templates/asking/index.html
+++ b/asking/templates/asking/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class = "my-4 p-2">
-        {% if index %}
+        {% if index or q %}
             <div class="row">
                 <h2>{{ title }}</h2>
             </div>
