--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -21,10 +21,10 @@
 				</div>
 
 				<div class="container">
-					<form class="form-inline my-2 col">
+					<form class="form-inline my-2 col" method="get", action="{% url 'search' %}">
 							<div class="row">
 								<div class="col-9">
-									<input class="form-control" type="search" placeholder="Найти" aria-label="search">
+									<input class="form-control" type="search" placeholder="Найти" name="q" aria-label="search">
 								</div>
 								<div class="col-3">
 									<button class="btn btn-info" type="submit"><i class="fas fa-search"></i></button>
